--- a/FitTrack_IOS/Base.lproj/LaunchScreen.storyboard
+++ b/FitTrack_IOS/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina6_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -11,10 +13,37 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="89A-Hc-zMd">
+                                <rect key="frame" x="94" y="399" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="128" id="4UX-yl-tpY"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="240" id="CeR-fh-MSd"/>
+                                    <constraint firstAttribute="width" constant="240" id="hwu-nQ-Y0Y"/>
+                                    <constraint firstAttribute="height" constant="128" id="la5-nc-Uuw"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FitTrack" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pp5-Jy-2jQ">
+                                <rect key="frame" x="157.33333333333334" y="543" width="113.66666666666666" height="40.666666666666629"/>
+                                <color key="tintColor" name="onPrimary"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                <color key="textColor" name="onPrimary"/>
+                                <color key="highlightedColor" name="onPrimary"/>
+                                <size key="shadowOffset" width="2" height="-1"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" red="0.65490196078431373" green="0.8666666666666667" blue="0.062745098039215685" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="89A-Hc-zMd" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Hin-aL-6H9"/>
+                            <constraint firstItem="pp5-Jy-2jQ" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="P8a-qF-3fR"/>
+                            <constraint firstItem="89A-Hc-zMd" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="TJW-rd-e8k"/>
+                            <constraint firstItem="89A-Hc-zMd" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="oQD-E8-A4F"/>
+                            <constraint firstItem="pp5-Jy-2jQ" firstAttribute="top" secondItem="89A-Hc-zMd" secondAttribute="bottom" constant="16" id="ojy-CZ-owj"/>
+                            <constraint firstItem="89A-Hc-zMd" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="vue-Os-FHy"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -22,4 +51,10 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="logo" width="723.66668701171875" height="723.66668701171875"/>
+        <namedColor name="onPrimary">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
